<resources>
    <string name="app_name">A Great Day</string>
    <string name="today_time_left">Today time left:</string>
    <string name="the_most_important_3_things_to_do">The most important 3 things to do:</string>
    <string name="task_name">Task name</string>
    <string name="estimate_time">Estimate Time</string>
    <string name="add">Add</string>
    <string name="total_hour">Total hour: %1$sh of %2$sh</string>
    <string name="created">Created: %1$s</string>
    <string name="all_tasks_completed">All tasks are completed, free play for you:)</string>
    <string name="sign_out">Sign out</string>
    <string name="task_marked_as_completed">Task marked as completed</string>
    <string name="task_next_cycle_created">Next cycle of task has created</string>
    <string name="repeat">Repeat</string>
    <string name="no_repeat">No repeat</string>
    <string name="daily">Daily</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
</resources>